--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: #000;
+            background: #1d1f20;
             color: white;
             height: 100vh;
             overflow: hidden;
@@ -22,15 +22,6 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background: linear-gradient(45deg, #ff9a8b, #ff6a00, #ff9e2c);
-            background-size: 300% 300%;
-            animation: gradientBG 15s ease infinite;
-        }
-
-        @keyframes gradientBG {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
         }
 
         h1 {
@@ -55,6 +46,36 @@
             animation: fadeInText 3s ease-out 1s forwards;
         }
 
+        .gallery {
+            display: flex;
+            gap: 20px;
+            margin-top: 40px;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .image-container {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+            overflow: hidden;
+            transition: transform 0.5s ease, box-shadow 0.5s ease;
+        }
+
+        .image-container:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 40px rgba(255, 255, 255, 1);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        /* Video Container */
         .video-container {
             position: relative;
             margin-top: 40px;
@@ -82,110 +103,45 @@
             filter: brightness(1);
         }
 
-        .background-shapes {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
-
-        .shape {
-            position: absolute;
-            opacity: 0.1;
-            animation: shapePulse 6s infinite ease-in-out;
-        }
-
-        .shape1 {
-            width: 300px;
-            height: 300px;
-            background-color: rgba(255, 255, 255, 0.3);
-            clip-path: circle(50% at 50% 50%);
-            animation-delay: 0s;
-            animation-name: moveShape1;
-        }
-
-        .shape2 {
-            width: 400px;
-            height: 400px;
-            background-color: rgba(255, 255, 255, 0.2);
-            clip-path: circle(50% at 50% 50%);
-            animation-delay: 1s;
-            animation-name: moveShape2;
-        }
-
-        .shape3 {
-            width: 500px;
-            height: 500px;
-            background-color: rgba(255, 255, 255, 0.1);
-            clip-path: circle(50% at 50% 50%);
-            animation-delay: 2s;
-            animation-name: moveShape3;
-        }
-
-        @keyframes shapePulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        @keyframes moveShape1 {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        @keyframes moveShape2 {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(-360deg); }
-        }
-
-        @keyframes moveShape3 {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        /* Parallax Scroll Effect */
+        /* Arka Plan */
         .parallax {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://www.w3schools.com/w3images/mountains.jpg');
+            background-image: url('https://i.pinimg.com/originals/91/63/5a/91635a07ba5826ff02ad9cf87773519a.jpg');
             background-attachment: fixed;
             background-size: cover;
             z-index: -2;
         }
-
-        /* Audio */
-        audio {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 0.3;
-            z-index: -1;
-        }
-
+        
     </style>
 </head>
 <body>
     <div class="parallax"></div>
 
-    <!-- Müzik çalıyor -->
-    <audio autoplay loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
-
     <div class="container">
         <h1>Hayat Olmasada</h1>
         <p>Seninle Güzel</p>
+    </div>
+
+    <div class="gallery">
+        <div class="image-container">
+            <a href="https://hizliresim.com/4zr3tdy">
+                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1">
+            </a>
+        </div>
+        <div class="image-container">
+            <a href="https://hizliresim.com/qbfg756">
+                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2">
+            </a>
+        </div>
+        <div class="image-container">
+            <a href="https://hizliresim.com/a2tcq5c">
+                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3">
+            </a>
+        </div>
     </div>
 
     <div class="video-container">
@@ -193,12 +149,6 @@
             <source src="https://v77.tiktokcdn.com/ed04949055da6846e0f21461f3f9ea1c/677a0306/video/tos/useast2a/tos-useast2a-ve-0068c002/ogCfBL5CFkVIIyLjXGEQCJASXygefbVR4XoIwG/?a=1233&bti=NDU3ZjAwOg%3D%3D&ch=0&cr=3&dr=0&lr=tiktok_m&cd=0%7C0%7C1%7C&cv=1&br=1808&bt=904&cs=0&ds=3&ft=pfEgdMlh8Zmo0hJc5b4jVRzhJpWrKsd.&mime_type=video_mp4&qs=0&rc=NDtlZDw6ZDozOTs2Ozw0N0BpajZpcW85cmV2cTMzNzczM0AzMzFgM2JhNmAxLy5hNGFfYSNjMXE1MmRjaTVgLS1kMTZzcw%3D%3D&vvpl=1&l=20250104215636A6E0EDBB407A69CB2668&btag=e000b8000&cc=13" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    </div>
-
-    <div class="background-shapes">
-        <div class="shape shape1"></div>
-        <div class="shape shape2"></div>
-        <div class="shape shape3"></div>
     </div>
 
 </body>
