--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 5rem;
+            font-size: 4rem;
             letter-spacing: 2px;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
@@ -39,7 +39,7 @@
         }
 
         p {
-            font-size: 2rem;
+            font-size: 1.8rem;
             color: rgba(255, 255, 255, 0.8);
             margin-top: 20px;
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
@@ -56,16 +56,17 @@
 
         .image-container {
             position: relative;
-            width: 300px;
-            height: 300px;
+            width: 250px;
+            height: 250px;
             border-radius: 15px;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
             overflow: hidden;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
             transition: transform 0.5s ease, box-shadow 0.5s ease;
+            margin: 10px;
         }
 
         .image-container:hover {
-            transform: scale(1.05);
+            transform: scale(1.1);
             box-shadow: 0 0 40px rgba(255, 255, 255, 1);
         }
 
@@ -73,9 +74,21 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: transform 0.3s ease;
         }
 
-        /* Video Container */
+        .image-container a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Tam ekran fotoğraf */
+        .image-container a:active img {
+            transform: scale(2);
+            transition: transform 0.3s ease-in-out;
+        }
+
         .video-container {
             position: relative;
             margin-top: 40px;
@@ -115,7 +128,20 @@
             background-size: cover;
             z-index: -2;
         }
-        
+
+        /* Çerçeve ve animasyon */
+        .image-container {
+            border: 5px solid #fff;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .image-container:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 25px rgba(255, 255, 255, 1);
+        }
+
     </style>
 </head>
 <body>
@@ -128,17 +154,17 @@
 
     <div class="gallery">
         <div class="image-container">
-            <a href="https://hizliresim.com/4zr3tdy">
+            <a href="https://hizliresim.com/4zr3tdy" target="_blank">
                 <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1">
             </a>
         </div>
         <div class="image-container">
-            <a href="https://hizliresim.com/qbfg756">
+            <a href="https://hizliresim.com/qbfg756" target="_blank">
                 <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2">
             </a>
         </div>
         <div class="image-container">
-            <a href="https://hizliresim.com/a2tcq5c">
+            <a href="https://hizliresim.com/a2tcq5c" target="_blank">
                 <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3">
             </a>
         </div>
