--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kimki - Efsane Tasarım</title>
+    <title>Kimki - Tam Ekran Görseller</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,21 +14,21 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background: #1d1f20;
+            background-color: #222;
             color: white;
             height: 100vh;
-            overflow: hidden;
-            position: relative;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+            position: relative;
             text-align: center;
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
             font-size: 4rem;
-            letter-spacing: 2px;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             animation: fadeInText 2s ease-out;
@@ -56,126 +57,104 @@
 
         .image-container {
             position: relative;
-            width: 250px;
-            height: 250px;
-            border-radius: 15px;
+            width: 200px;
+            height: 200px;
             overflow: hidden;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
-            transition: transform 0.5s ease, box-shadow 0.5s ease;
-            margin: 10px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
         }
 
         .image-container:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 40px rgba(255, 255, 255, 1);
+            transform: scale(1.05);
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
         }
 
         .image-container img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.3s ease;
         }
 
-        .image-container a {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Tam ekran fotoğraf */
-        .image-container a:active img {
-            transform: scale(2);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .video-container {
-            position: relative;
-            margin-top: 40px;
-            border-radius: 20px;
-            overflow: hidden;
-            animation: scaleUp 2s ease-out;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-        }
-
-        @keyframes scaleUp {
-            0% { transform: scale(0.9); opacity: 0; }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
-        .video-container video {
-            width: 800px;
-            height: 450px;
-            border-radius: 10px;
-            filter: brightness(0.7);
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            transition: filter 0.5s ease;
-        }
-
-        .video-container:hover video {
-            filter: brightness(1);
-        }
-
-        /* Arka Plan */
-        .parallax {
+        /* Tam ekran modunun stili */
+        .fullscreen {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('https://i.pinimg.com/originals/91/63/5a/91635a07ba5826ff02ad9cf87773519a.jpg');
-            background-attachment: fixed;
-            background-size: cover;
-            z-index: -2;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            display: none;
         }
 
-        /* Çerçeve ve animasyon */
-        .image-container {
-            border: 5px solid #fff;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            background-color: rgba(0, 0, 0, 0.5);
+        .fullscreen img {
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
         }
 
-        .image-container:hover {
-            transform: scale(1.1);
-            box-shadow: 0 0 25px rgba(255, 255, 255, 1);
+        .fullscreen.active {
+            display: flex;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 30px;
+            color: white;
+            background: rgba(0, 0, 0, 0.6);
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            padding: 10px;
         }
 
     </style>
 </head>
 <body>
-    <div class="parallax"></div>
 
-    <div class="container">
-        <h1>Hayat Olmasada</h1>
-        <p>Seninle Güzel</p>
-    </div>
+    <h1>Hayat Olmasada</h1>
+    <p>Seninle Güzel</p>
 
     <div class="gallery">
         <div class="image-container">
-            <a href="https://hizliresim.com/4zr3tdy" target="_blank">
-                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1">
-            </a>
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
         </div>
         <div class="image-container">
-            <a href="https://hizliresim.com/qbfg756" target="_blank">
-                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2">
-            </a>
+            <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2" onclick="openFullscreen(this)">
         </div>
         <div class="image-container">
-            <a href="https://hizliresim.com/a2tcq5c" target="_blank">
-                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3">
-            </a>
+            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
+        </div>
+        <div class="image-container">
+            <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
         </div>
     </div>
 
-    <div class="video-container">
-        <video controls>
-            <source src="https://v77.tiktokcdn.com/ed04949055da6846e0f21461f3f9ea1c/677a0306/video/tos/useast2a/tos-useast2a-ve-0068c002/ogCfBL5CFkVIIyLjXGEQCJASXygefbVR4XoIwG/?a=1233&bti=NDU3ZjAwOg%3D%3D&ch=0&cr=3&dr=0&lr=tiktok_m&cd=0%7C0%7C1%7C&cv=1&br=1808&bt=904&cs=0&ds=3&ft=pfEgdMlh8Zmo0hJc5b4jVRzhJpWrKsd.&mime_type=video_mp4&qs=0&rc=NDtlZDw6ZDozOTs2Ozw0N0BpajZpcW85cmV2cTMzNzczM0AzMzFgM2JhNmAxLy5hNGFfYSNjMXE1MmRjaTVgLS1kMTZzcw%3D%3D&vvpl=1&l=20250104215636A6E0EDBB407A69CB2668&btag=e000b8000&cc=13" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <div class="fullscreen" id="fullscreen-container">
+        <button class="close-btn" onclick="closeFullscreen()">×</button>
+        <img id="fullscreen-image" src="" alt="Fullscreen Image">
     </div>
+
+    <script>
+        function openFullscreen(imgElement) {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            var fullscreenImage = document.getElementById('fullscreen-image');
+            fullscreenImage.src = imgElement.src;
+            fullscreenContainer.classList.add('active');
+        }
+
+        function closeFullscreen() {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            fullscreenContainer.classList.remove('active');
+        }
+    </script>
 
 </body>
 </html>
