--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kimki - Tam Ekran Görseller</title>
+    <title>Kimki - Şık Tasarım</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #222;
+            background-color: #121212;
             color: white;
             height: 100vh;
             display: flex;
@@ -48,33 +48,41 @@
         }
 
         .gallery {
-            display: flex;
-            gap: 20px;
+            display: grid;
+            gap: 30px;
             margin-top: 40px;
-            flex-wrap: wrap;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             justify-content: center;
+            align-items: center;
         }
 
         .image-container {
             position: relative;
-            width: 200px;
-            height: 200px;
+            width: 100%;
+            height: 100%;
+            border-radius: 15px;
             overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.4);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         .image-container:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
         }
 
         .image-container img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .image-container:hover img {
+            transform: scale(1.1);
         }
 
         /* Tam ekran modunun stili */
@@ -96,6 +104,7 @@
             max-width: 90%;
             max-height: 90%;
             object-fit: contain;
+            border-radius: 15px;
         }
 
         .fullscreen.active {
@@ -106,13 +115,18 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            font-size: 30px;
+            font-size: 40px;
             color: white;
             background: rgba(0, 0, 0, 0.6);
             border: none;
             border-radius: 50%;
             cursor: pointer;
             padding: 10px;
+            z-index: 2000;
+        }
+
+        .close-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
         }
 
     </style>
