--- a/index.html
+++ b/index.html
@@ -3,177 +3,212 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mehmet12ws</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>Profesyonel Tasarım</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        /* Temel stil ayarları */
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #0a0a0a;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+            color: #333;
+            overflow-x: hidden;
+        }
+
+        h1, h2, p {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        /* Parallax arka plan efekti */
+        .parallax {
+            background-image: url('https://via.placeholder.com/1920x1080');
+            height: 100vh;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            overflow: hidden;
-            position: relative;
-            text-align: center;
-            padding: 20px;
-        }
-
-        h1 {
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+            font-size: 2.5rem;
             font-family: 'Dancing Script', cursive;
-            font-size: 3.5rem;
-            color: #fff;
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-            animation: fadeInText 2s ease-out;
         }
 
-        @keyframes fadeInText {
-            0% { opacity: 0; transform: translateY(-50px); }
-            100% { opacity: 1; transform: translateY(0); }
+        .content {
+            text-align: center;
+            padding: 50px;
         }
 
-        p {
-            font-size: 1.5rem;
-            color: rgba(255, 255, 255, 0.8);
-            margin-top: 20px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
-            animation: fadeInText 3s ease-out 1s forwards;
-        }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 30px;
-            margin-top: 40px;
-            width: 80%;
-            position: relative;
-        }
-
-        .image-container {
-            position: relative;
-            width: 250px;
-            height: 250px;
-            margin: 20px;
+        /* Resimlerin hover efektleri */
+        .gallery img {
+            width: 300px;
+            height: 200px;
             border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease-in-out;
             cursor: pointer;
-            background-color: rgba(255, 255, 255, 0.1);
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            transform: rotate(5deg);
         }
 
-        .image-container:hover {
-            transform: scale(1.05) rotate(0deg);
-            box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
-        }
-
-        .image-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-            border-radius: 15px;
-        }
-
-        .image-container:hover img {
+        .gallery img:hover {
             transform: scale(1.1);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
         }
 
-        /* Tam ekran modunun stili */
-        .fullscreen {
+        /* Hover'da büyüyen resimler için animasyon */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 40px;
+        }
+
+        /* Dinamik başlık animasyonu */
+        h1 {
+            animation: fadeIn 3s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Yükleme ekranı */
+        .loader {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
+            background: rgba(255, 255, 255, 0.8);
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1000;
-            display: none;
+            z-index: 9999;
         }
 
-        .fullscreen img {
-            max-width: 95%;
-            max-height: 95%;
-            object-fit: contain;
-            border-radius: 15px;
-        }
-
-        .fullscreen.active {
-            display: flex;
-        }
-
-        .close-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 40px;
-            color: white;
-            background: rgba(0, 0, 0, 0.6);
-            border: none;
+        .loader .spinner {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
             border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Modern buton stili */
+        .btn {
+            background-color: #3498db;
+            color: white;
+            font-size: 1.2rem;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 25px;
             cursor: pointer;
-            padding: 10px;
-            z-index: 2000;
+            transition: all 0.3s ease;
+            text-decoration: none;
         }
 
-        .close-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
+        .btn:hover {
+            background-color: #2980b9;
+            transform: scale(1.05);
         }
 
+        /* Footer bölümü */
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        footer a {
+            color: #3498db;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1.2rem;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Yazıların animasyonla çıkması */
+        .fade-up {
+            opacity: 0;
+            animation: fadeUp 1s ease-in-out forwards;
+        }
+
+        @keyframes fadeUp {
+            0% {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Yükleme ekranı -->
+    <div class="loader">
+        <div class="spinner"></div>
+    </div>
 
-    <div>
-        <h1>Hayat Olmasada</h1>
-        <p>Seninle Güzel</p>
+    <!-- Parallax Arka Plan -->
+    <div class="parallax">
+        <h1>Profesyonel ve Şık Tasarım</h1>
+    </div>
 
+    <!-- İçerik Bölümü -->
+    <div class="content fade-up">
+        <h2>Görselleri Keşfedin</h2>
+        <p>En yeni ve şık resim galerisine göz atın.</p>
+        
+        <!-- Resim Galerisi -->
         <div class="gallery">
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
-            </div>
+            <a href="https://hizliresim.com/4zr3tdy" target="_blank"><img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1"></a>
+            <a href="https://hizliresim.com/qbfg756" target="_blank"><img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2"></a>
+            <a href="https://hizliresim.com/a2tcq5c" target="_blank"><img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3"></a>
+            <a href="https://hizliresim.com/hljwsvz" target="_blank"><img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4"></a>
         </div>
+
+        <a href="https://hizliresim.com/hljwsvz" class="btn" target="_blank">Daha Fazla Keşfet</a>
     </div>
 
-    <div class="fullscreen" id="fullscreen-container">
-        <button class="close-btn" onclick="closeFullscreen()">×</button>
-        <img id="fullscreen-image" src="" alt="Fullscreen Image">
-    </div>
+    <!-- Footer Bölümü -->
+    <footer>
+        <p>&copy; 2025 Tasarım & Geliştirme</p>
+        <p>
+            <a href="#">Sosyal Medya</a>
+            <a href="#">İletişim</a>
+            <a href="#">Hakkımızda</a>
+        </p>
+    </footer>
 
     <script>
-        function openFullscreen(imgElement) {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
-            var fullscreenImage = document.getElementById('fullscreen-image');
-            fullscreenImage.src = imgElement.src;
-            fullscreenContainer.classList.add('active');
-        }
-
-        function closeFullscreen() {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
-            fullscreenContainer.classList.remove('active');
-        }
+        // Yükleme ekranını gizle
+        window.addEventListener('load', function () {
+            document.querySelector('.loader').style.display = 'none';
+        });
     </script>
-
 </body>
 </html>
